feature: 在富编辑器从剪切板上传图片中，增加从文件上传图片功能

--- a/public/themes/default/stylesheets/ext4-cux.css
+++ b/public/themes/default/stylesheets/ext4-cux.css
@@ -43,3 +43,7 @@
 .x-strict .x-ie6 .x-grid-header-row {
     position: inherit;
 }
+
+.x-html-editor-tb .x-edit-uploadimage{
+    background-image: url("../images/16_16/photo_edit.gif");
+}
