--- a/app/views/helper/_rich_text.html.erb
+++ b/app/views/helper/_rich_text.html.erb
@@ -51,25 +51,42 @@
     <%end%>
         <%=textarea_id%>RichText.getToolbar().add('-', {
              tooltip: 'Full Screen',
-             iconCls: 'x-btn-icon x-edit-insertimage',
+             iconCls: 'x-btn-icon x-edit-uploadimage',
              handler: function(){
+                        var tabPan = new Ext.TabPanel({
+                            height: 351,
+                            activeTab: 0,
+                            frame: true,
+                            region: 'center',
+                            layoutOnTabChange: true,
+                            columnWidth:1,
+                            border: true,
+                            items: [
+                                {title:'<%= I18n.t :label_irm_rich_editor_win_tab_from_clipboard%>', html:"<iframe frameborder=0 scrolling='no'  src='/common/upload_screen_shot' class='screen_shot_frame'></iframe>"},
+                                {title:'<%= I18n.t :label_irm_rich_editor_win_tab_from_file%>', html:"<iframe frameborder=0 scrolling='no'  src='/common/upload_file' class='screen_shot_frame'></iframe>"}]
+                        });
+                        tabPan.doLayout();
                         var win= new Ext.Window({
-                                    title: "test title",
-                                    width: 450,
-                                    height: 380,
+                                    title: "<%= I18n.t :label_irm_rich_editor_win_tab_upload_image%>",
+                                    width: 440,
+                                    height: 385,
+                                    layout:'column',
                                     maximizable: false,
                                     resizable: false,
-                                    html: "<iframe frameborder=0 scrolling='no'  src='/common/upload_screen_shot' class='screen_shot_frame'></iframe>",
                                     id: "<%=textarea_id%>_image_shot" ,
+                                    border:false,
+                                    defaults:{border:false},
+                                    items: [tabPan],
                                     modal:true
                                 });
+
+                        win.doLayout();
                         win.show();
+
              }
         });
 
 
     });
 <%end%>
-
-
 </script>
