--- a/public/themes/default/stylesheets/button.css
+++ b/public/themes/default/stylesheets/button.css
@@ -15,7 +15,7 @@ div.button a {
 	text-decoration: none;
 	color:#333333;
 	display: inline-block;
-	padding: 0 8px;
+	padding: 0 8px 2px 8px;
 	height: 20px;
     font-size: 11px;
     font-weight: bold;
@@ -32,10 +32,10 @@ div.button input[type="submit"] {
 	color:#333333;
 	display: inline-block;
 	padding: 0 5px 2px 5px;
-	height: 22px;
+	height: 20px;
     font-size: 11px;
     font-weight: bold;
-	line-height: 22px;
+	line-height: 20px;
 }
 div.button input[type="submit"]:hover{background-position: right -30px; cursor: pointer;}
 
