--- a/app/views/irm/common/upload_file.html.erb
+++ b/app/views/irm/common/upload_file.html.erb
@@ -17,7 +17,7 @@
             <tbody>
                 <tr>
                   <td class="labelCol"><label><%=(t :label_irm_rich_editor_win_tab_selected_file)%></label></td>
-                  <td class="data2Col"><input type="file" name="file" accept="image/gif,image/jpeg,image/x-png"/></td>
+                  <td class="data2Col"><input type="file" name="file" accept="image/gif,image/jpeg,image/x-png,image/png"/></td>
                 </tr>
                 <tr>
                   <td class="labelCol">&nbsp;</td>
