--- a/app/views/irm/business_objects/show.html.erb
+++ b/app/views/irm/business_objects/show.html.erb
@@ -123,4 +123,26 @@
     </div>
 </div>
 
+<div class="listRelatedObject setupBlock">
+    <div class="page-block">
+      <div class="pbHeader">
+        <table cellpadding="0" cellspacing="0" border="0">
+          <tbody>
+            <tr>
+              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_search_layout) %></h2></td>
+              <td class="pbButton">
+                <div class="button"><%= link_to t(:new), {:controller => "irm/search_layouts",:action => "new", :bo_id => @business_object.id}%></div>
+              </td>
+              <td class="pbHelp">
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="pbBody">
+        <%= render :partial=>"search_layouts",:locals=>{:datas=>available_search_layouts(@business_object.id)}%>
+      </div>
+    </div>
+</div>
+
 <%=render :partial=>"multilingual/show",:locals=>{:main_data=>@business_object} %>
