--- a/app/views/irm/people/_edit_form.html.erb
+++ b/app/views/irm/people/_edit_form.html.erb
@@ -49,7 +49,7 @@
               <td class="dataCol"><%=f.text_field :first_name, :required=>true%></td>
               <td class="labelCol"><label><%=t(:label_irm_person_bussiness_phone)%></label></td>
               <td class="dataCol">
-                <%=f.text_field :bussiness_phone,:required=>true%>
+                <%=f.text_field :bussiness_phone,{:required=>true, :irm_number_and_cross => true}%>
               </td>
             </tr>
 
@@ -58,7 +58,7 @@
               <td class="dataCol"><%= f.select(:language_code, selectable_languages) %></td>
                <td class="labelCol"><label><%=t(:label_irm_person_fax_number)%></label></td>
                <td class="dataCol">
-                   <%=f.text_field :fax_number%>
+                   <%=f.text_field :fax_number,{:irm_number_and_cross => true}%>
                </td>
             </tr>
             <tr>
@@ -66,7 +66,7 @@
               <td class="dataCol"><%=f.select :notification_lang,selectable_languages%></td>
                <td class="labelCol"><label><%=t(:label_irm_person_mobile_phone)%></label></td>
                <td class="dataCol">
-                 <%=f.text_field :mobile_phone%>
+                 <%=f.text_field :mobile_phone,{:irm_number_only => true}%>
                </td>
             </tr>
             <tr>
@@ -76,7 +76,7 @@
                <td class="dataCol"><%=f.check_box :notification_flag%></td>
               <td class="labelCol"><label><%=t(:label_irm_person_home_phone)%></label></td>
               <td class="dataCol">
-                <%=f.text_field :home_phone%>
+                <%=f.text_field :home_phone,{:irm_number_and_cross => true}%>
               </td>
             </tr>
             <tr>
