--- a/app/views/irm/people/_new_form.html.erb
+++ b/app/views/irm/people/_new_form.html.erb
@@ -54,7 +54,7 @@
               <td class="dataCol"><%=f.text_field :first_name, :required=>true%></td>
               <td class="labelCol"><label><%=t(:label_irm_person_bussiness_phone)%></label></td>
               <td class="dataCol">
-                <%=f.text_field :bussiness_phone,:required=>true%>
+                <%=f.text_field :bussiness_phone,{:required=>true, :irm_number_and_cross => true}%>
               </td>
             </tr>
 
@@ -63,7 +63,7 @@
               <td class="dataCol"><%= f.select(:language_code, selectable_languages) %></td>
                <td class="labelCol"><label><%=t(:label_irm_person_fax_number)%></label></td>
                <td class="dataCol">
-                   <%=f.text_field :fax_number%>
+                   <%=f.text_field :fax_number, {:irm_number_and_cross => true}%>
                </td>
             </tr>
             <tr>
@@ -71,7 +71,7 @@
               <td class="dataCol"><%=f.select :notification_lang,selectable_languages%></td>
               <td class="labelCol"><label><%=t(:label_irm_person_mobile_phone)%></label></td>
                <td class="dataCol">
-                 <%=f.text_field :mobile_phone%>
+                 <%=f.text_field :mobile_phone, {:irm_number_only => true}%>
                </td>
             </tr>
             <tr>
@@ -82,7 +82,7 @@
 
               <td class="labelCol"><label><%=t(:label_irm_person_home_phone)%></label></td>
               <td class="dataCol">
-                <%=f.text_field :home_phone%>
+                <%=f.text_field :home_phone, {:irm_number_and_cross => true}%>
               </td>
             </tr>
             <tr>
