--- a/app/views/irm/home/index.html.erb
+++ b/app/views/irm/home/index.html.erb
@@ -9,7 +9,7 @@
               <%= link_to Irm::Person.current.name, {:controller => "irm/my_info", :action => "index"} %>
             </h1>
           </span>
-          <span class="page-description"><%= Time.now.strftime(t("date.formats.long")) + t("date.day_names")[Time.now.strftime("%w").to_f]%></span>
+          <span class="page-description"><%= Time.now.strftime(t("date.formats.long")) + ' ' + t("date.day_names")[Time.now.strftime("%w").to_f]%></span>
       </div>
     </div>
     <div class="links">
