--- a/app/views/icm/incident_requests/_new_form.html.erb
+++ b/app/views/icm/incident_requests/_new_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for(@incident_request,:url=>{:action=>"create"},:builder => LabellingFormBuilder,:html => { :multipart => true }) do |f| %>
+<%= hidden_field_tag :return_url,@return_url %>
 <div id="ep" class="edit-block page-block">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
@@ -7,7 +8,11 @@
           <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_icm_incident_request_new)%></h2></td>
           <td id="topButtonRow" class="pbButton">
             <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
+            <% if @return_url%>
+              <div class="button"><%= link_to t(:cancel), @return_url%></div>
+            <% else %>
+              <div class="button"><%= link_back t(:cancel)%></div>
+            <% end %>
           </td>
         </tr>
       </tbody>
