--- a/public/themes/default/stylesheets/button.css
+++ b/public/themes/default/stylesheets/button.css
@@ -32,16 +32,20 @@ div.button input[type="submit"] {
 	color:#333333;
 	display: inline-block;
 	padding: 0 5px 2px 5px;
+    padding: 0 5px 0 5px\9;
 	height: 22px;
+    height: 20px\9;
     font-size: 11px;
     font-weight: bold;
 	line-height: 22px;
+    line-height: 20px\9;
 }
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
 
     div.button a {
         -moz-border-radius: 3px 3px 3px 3px;
+        -webkit-border-radius: 3px;
         background: url("../images/btn_sprite.png") repeat-x scroll right top #E8E8E9;
         border-color: #B5B5B5 #B5B5B5 #7F7F7F;
         border-width: 1px;
@@ -58,6 +62,7 @@ div.button input[type="submit"] {
 
     div.button input[type="submit"] {
         -moz-border-radius: 3px 3px 3px 3px;
+        -webkit-border-radius: 3px;
         background: url("../images/btn_sprite.png") repeat-x scroll right top #E8E8E9;
         border-color: #B5B5B5 #B5B5B5 #7F7F7F;
         border-width: 1px;
@@ -65,11 +70,11 @@ div.button input[type="submit"] {
         text-decoration: none;
         color:#333333;
         display: inline-block;
-        padding: 0 5px 2px 5px;
-        height: 22px;
+        padding: 0 5px 0 5px;
+        height: 20px;
         font-size: 11px;
         font-weight: bold;
-        line-height: 22px;
+        line-height: 20px;
     }
 
 }
