--- a/public/themes/default/stylesheets/button.css
+++ b/public/themes/default/stylesheets/button.css
@@ -89,6 +89,7 @@ div.button a[class="disabled"]{
 
 div.gray-button a {
     -moz-border-radius: 3px 3px 3px 3px;
+    -webkit-border-radius: 3px;
     border-color: #f8f8f8;
 	border-width: 1px;
     border-style: solid;
