--- a/app/views/icm/incident_journals/_new_form.html.erb
+++ b/app/views/icm/incident_journals/_new_form.html.erb
@@ -1,3 +1,5 @@
+<% require_javascript(:waypoints) %>
+
 <style type="text/css">
   ul{
       padding-left: 40px;
@@ -93,7 +95,7 @@
 </style>
 <form>
 <div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
+  <div class="pbHeader" id="icm_new_journal_top_menu">
     <table cellpadding="0" cellspacing="0" border="0">
       <tbody>
         <tr>
@@ -369,6 +371,37 @@ $(function(){
     });
 });
 </script>
+<% unless limit_device? %>
+<style type="text/css">
+    .sticky #icm_new_journal_top_menu {
+        position:fixed;
+        top:0;
+        width:auto;
+        left:20px;
+        right:235px;
+        background-color: #F8F8F8;
+        border:1px solid #eaeaea;
+        border-top-width: 0;
+        border-bottom-width: 0;
+    }
+
+    #ep.sticky {
+        padding-top: 34px;
+}
+</style>
+<script type="text/javascript">
+    $.waypoints.settings.scrollThrottle = 30;
+
+    $('#ep').waypoint(function(event, direction) {
+
+	}, {
+		offset: '-100%'
+	}).find('#icm_new_journal_top_menu').waypoint(function(event, direction) {
+		$(this).parent().toggleClass('sticky', direction === "down");
+		event.stopPropagation();
+	});
+</script>
+<% end %>
 
 <% content_for :sidebar do%>
     <%= render :partial =>"/irm/watchers/sidebar_watcher_list",
