--- a/app/views/irm/report_types/show.html.erb
+++ b/app/views/irm/report_types/show.html.erb
@@ -124,9 +124,9 @@
                     </th>
                   </tr>
                 </thead>
-                <tbody class="yui3-datatable-data">
+                <tbody>
                   <% report_type_fields(@report_type).each do |obj| %>
-                    <tr class="yui3-datatable-even">
+                    <tr>
                       <td>
                         <div><%=obj[0]%></div>
                       </td>
