--- a/app/views/irm/wf_mail_alerts/_new_form.html.erb
+++ b/app/views/irm/wf_mail_alerts/_new_form.html.erb
@@ -66,7 +66,7 @@
             <% else %>
               <tr>
                 <td class="labelCol"><label for="bo_code"><%=t(:label_irm_wf_mail_alert_bo_code)%></label></td>
-                <td class="dataCol"><%=f.blank_select :bo_code,available_business_object,{}, {:id=>"bo_code",:required=>true,:href=>url_for(:controller=>"irm/object_attributes",:action=>"person_columns",:format=>"json",:business_object_code=>"{bo_code}")}%></td>
+                <td class="dataCol"><%=f.blank_select :bo_code,available_business_object,{}, {:id=>"bo_code",:required=>true,:href=>url_for(:controller=>"irm/object_attributes",:action=>"person_columns",:format=>"json",:business_object_code=>"${bo_code}")}%></td>
                 <td class="labelCol empty">
                 </td>
                 <td class="dataCol empty">&nbsp;</td>
