--- a/app/views/icm/incident_journals/_new_form.html.erb
+++ b/app/views/icm/incident_journals/_new_form.html.erb
@@ -107,23 +107,27 @@
               <% end %>
           </td>
           <td class="pbHelp">
-              <div class="gray-button"><%= link_to t(:label_icm_incident_journal_back_to_request_list), {:controller=>"icm/incident_requests",:action => "index"}%></div>
-              <%if !@incident_request.close? %>
-                <% if current_person?(@incident_request.support_person_id) %>
-                    <div class="gray-button"><%= link_to t(:pass), {:action => "edit_pass"}%></div>
-                    <div class="gray-button"><%= link_to t(:label_icm_incident_request_incident_status), {:action => "edit_status"}%></div>
-                <% end %>
-                <% if current_person?(@incident_request.support_person_id)&&available_upgradable_supporter(@incident_request.support_group_id).any? %>
-                      <div class="gray-button"><%= link_to t(:label_icm_incident_request_upgrade), {:action => "edit_upgrade"}%></div>
-                <% end %>
-                <% if current_person?(@incident_request.support_person_id)||current_person?(@incident_request.requested_by) %>
-                  <div class="gray-button"><%= link_to t(:close), {:action => "edit_close"}%></div>
-                <% end %>
-                <div class="gray-button"><%= link_to t(:edit), {:controller=>"icm/incident_requests",:action => "edit", :id => @incident_request.id}%></div>
-              <%end%>
-              <% if @incident_request[:skm_flag]==0 %>
-                <div class="gray-button"><%= link_to t(:label_icm_save_as_skm), {:controller=>"skm/entry_headers",:action => "new_from_icm_request", :request_id => @incident_request.id}%></div>
-              <% end %>
+              <div class="button-group">
+                  <div class="gray-button"><%= link_to t(:label_icm_incident_journal_back_to_request_list), {:controller=>"icm/incident_requests",:action => "index"}%></div>
+              </div>
+              <div class="button-group">
+                  <%if !@incident_request.close? %>
+                    <% if current_person?(@incident_request.support_person_id) %>
+                        <div class="gray-button"><%= link_to t(:pass), {:action => "edit_pass"}%></div>
+                        <div class="gray-button"><%= link_to t(:label_icm_incident_request_incident_status), {:action => "edit_status"}%></div>
+                    <% end %>
+                    <% if current_person?(@incident_request.support_person_id)&&available_upgradable_supporter(@incident_request.support_group_id).any? %>
+                          <div class="gray-button"><%= link_to t(:label_icm_incident_request_upgrade), {:action => "edit_upgrade"}%></div>
+                    <% end %>
+                    <% if current_person?(@incident_request.support_person_id)||current_person?(@incident_request.requested_by) %>
+                      <div class="gray-button"><%= link_to t(:close), {:action => "edit_close"}%></div>
+                    <% end %>
+                    <div class="gray-button"><%= link_to t(:edit), {:controller=>"icm/incident_requests",:action => "edit", :id => @incident_request.id}%></div>
+                  <%end%>
+                  <% if @incident_request[:skm_flag]==0 %>
+                    <div class="gray-button"><%= link_to t(:label_icm_save_as_skm), {:controller=>"skm/entry_headers",:action => "new_from_icm_request", :request_id => @incident_request.id}%></div>
+                  <% end %>
+              </div>
           </td>
         </tr>
       </tbody>
