--- a/public/themes/default/stylesheets/button.css
+++ b/public/themes/default/stylesheets/button.css
@@ -1,4 +1,4 @@
-div.button, div.gray-button, div.as-button {
+div.button, div.as-button, div.gray-button {
 	float: left;
 	margin-left: 6px;
 	margin-top: 1px;
@@ -105,11 +105,56 @@ div.gray-button a {
 div.gray-button a:hover{
     background: url("../images/btn_sprite.png") repeat-x scroll right top #E8E8E9;
     /*background-position: right -30px;*/
-    border-color: #cdcdcd;
+    border-color: #b5b5b5;
 	border-width: 1px;
     border-style: solid;
 }
 
+.button-group > div.gray-button{
+    border-width: 1px 1px 1px 0;
+    border-style: solid;
+    border-color: #b5b5b5;
+    margin-left: 0;
+}
+
+.button-group > div.gray-button:first-child{
+    -moz-border-radius-topleft: 3px;
+    -moz-border-radius-bottomleft: 3px;
+    -webkit-border-top-left-radius: 3px;
+    -webkit-border-bottom-left-radius: 3px;
+    border-left-width: 1px;
+    margin-left: 6px;
+}
+
+.button-group > div.gray-button:nth-last-of-type(1){
+    -moz-border-radius-topright: 3px;
+    -moz-border-radius-bottomright: 3px;
+    -webkit-border-top-right-radius: 3px;
+    -webkit-border-bottom-right-radius: 3px;
+}
+
+.button-group div.gray-button a {
+    border: none;
+	text-decoration: none;
+	color:#333333;
+	display: inline-block;
+	padding: 0 8px;
+	height: 20px;
+    font-size: 11px;
+    font-weight: bold;
+	line-height: 20px;
+}
+
+.button-group div.gray-button a:hover{
+    background: url("../images/btn_sprite.png") repeat-x scroll right top #E8E8E9;
+    background-position: right -30px;
+    /*background-position: right -30px;*/
+}
+
+.button-group div.gray-button:hover{
+    /*border-width: 1px;*/
+    border-color: #919191;
+}
 
 .page-block .buttons, .page-block .gray-buttons {padding:3px 20px;text-align:center;}
 
