--- a/app/views/icm/incident_journals/_new_form.html.erb
+++ b/app/views/icm/incident_journals/_new_form.html.erb
@@ -119,6 +119,8 @@
                     <% if current_person?(@incident_request.support_person_id)&&available_upgradable_supporter(@incident_request.support_group_id).any? %>
                           <div class="gray-button"><%= link_to t(:label_icm_incident_request_upgrade), {:action => "edit_upgrade"}%></div>
                     <% end %>
+              </div>
+              <div class="button-group">
                     <% if current_person?(@incident_request.support_person_id)||current_person?(@incident_request.requested_by) %>
                       <div class="gray-button"><%= link_to t(:close), {:action => "edit_close"}%></div>
                     <% end %>
