--- a/app/views/icm/incident_requests/_short_cut_new.html.erb
+++ b/app/views/icm/incident_requests/_short_cut_new.html.erb
@@ -7,8 +7,7 @@
             <% if allow_to_function?(:create_icdt_rqst_for_other) %>
               <div class="quickCreateField">
                 <label for="incident_request_requested_by"><%=t(:label_icm_incident_request_requested_by)%><%= required_icon %></label><br>
-                <%=f.select :requested_by,nullable_options_for_select(available_person,@incident_request.requested_by),
-                                                              {},{:id=>"incident_request_requested_by"}%>
+                <%=f.lov_field :requested_by,Irm::Person,{:id=>"incident_request_requested_by"}%>
               </div>
                 <script type="text/javascript">
                    $(function(){
