feature: 用户点击跟踪者姓名后，系统应该显示该跟踪者的相关信息

--- a/app/views/irm/watchers/_sidebar_watcher_list.html.erb
+++ b/app/views/irm/watchers/_sidebar_watcher_list.html.erb
@@ -40,7 +40,7 @@
         </div>
     </div>
     <% end %>
-<% if limit_device? %>
+<% unless limit_device? %>
     <script type="text/javascript">
       $(function(){
           $('.watcher_info').each(function(){
