对报表中的日期字段进行特殊处理

--- a/app/views/irm/reports/_show_common.html.erb
+++ b/app/views/irm/reports/_show_common.html.erb
@@ -15,7 +15,7 @@
     <% @report.report_meta_data.each do |rd| %>
     <tr>
       <% @report.report_header.each do |k|  %>
-        <td><%= rd[k[0]] %></td>
+        <td><%= show_report_cell(rd[k[0]]) %></td>
       <% end %>
     </tr>
     <% end %>
