fixed: ajax提交事故单回复后，清空附件列表和编辑器内容

--- a/app/views/icm/incident_journals/_new_form.html.erb
+++ b/app/views/icm/incident_journals/_new_form.html.erb
@@ -380,6 +380,17 @@ $(function(){
         }
     });
 });
+
+function reset_rich_text(){
+    if ($("#msgEditor")) {
+        var editor = Ext.getCmp("msgEditor");
+        editor.setValue("");
+    }
+
+    $(".file-contents").each(function(index,element){
+        $(element).remove();
+    })
+}
 </script>
 <% unless limit_device? %>
 <style type="text/css">
