--- a/app/views/irm/group_members/new_from_person.html.erb
+++ b/app/views/irm/group_members/new_from_person.html.erb
@@ -1,16 +1,5 @@
 <%= common_title(:action_meaning=>t(:label_action_new)) %>
-<script type="text/javascript">
-  Ext.onReady(function(){
-      var setSelectedValue = function(selModel,selected){
-          var ids = [];
-          for(var i = 0;i<selected.length;i++){
-            ids.push(selected[i].data.id);
-          }
-          $("#irm_group_member_status_code").val(ids.join(","));
-      }
-      Ext.getCmp("supportGroupMembersDatatable").selModel.addListener("selectionchange",addMember);
-});
-</script>
+
 <div class="listRelatedObject setupBlock">
     <div class="page-block">
       <div class="pbHeader">
@@ -47,3 +36,15 @@
       </div>
     </div>
 </div>
+<script type="text/javascript">
+  Ext.onReady(function(){
+      var setSelectedValue = function(selModel,selected){
+          var ids = [];
+          for(var i = 0;i<selected.length;i++){
+            ids.push(selected[i].data.id);
+          }
+          $("#irm_group_member_status_code").val(ids.join(","));
+      }
+      Ext.getCmp("supportGroupMembersDatatable").selModel.addListener("selectionchange",setSelectedValue);
+});
+</script>
