修正系统登录页面无法记住登录名的bug

--- a/app/views/irm/common/login.html.erb
+++ b/app/views/irm/common/login.html.erb
@@ -76,7 +76,7 @@
                   $("#rememberchk").attr("checked",true);
                   $("#password").attr("value","");
               }
-              $("#password").keydown(function(e){
+              $("#login_form").keydown(function(e){
                   if(e.keyCode=='13'){
                     $("#sumbitlogin").trigger("click");
                   }
