使用lov添加事故单跟踪者

--- a/app/views/irm/watchers/_sidebar_watcher_list.html.erb
+++ b/app/views/irm/watchers/_sidebar_watcher_list.html.erb
@@ -11,7 +11,7 @@
             <tr>
               <td>
                 <div id="watcher_select">
-                <%= select_tag "watcher", options_for_select(ava_watchers(watchable.id, watchable.class), {:id => "watcher"})%>
+                <%= lov_field_tag("watcher",Irm::Person, {:id => "watcher"}) %>
                 </div>
                 <%= hidden_field_tag "watchable_type", watchable.class.to_s%>
               </td>
