--- a/app/views/icm/incident_requests/_sidebar_relation_list.html.erb
+++ b/app/views/icm/incident_requests/_sidebar_relation_list.html.erb
@@ -2,7 +2,9 @@
 <div class="sidebarModule">
     <div class="sidebarModuleHeader"><h2>
       <%= t :label_icm_incident_request_relation %>
+      <% if allow_to_function?(:edit_relation)  %>
       <span style="float:right;"><a style="color:#fff;" href="javascript:void(0);" onclick="show_new_relation_form();"><%= t(:add)%></a></span>
+      <% end %>
     </h2></div>
     <div class="sidebarModuleBody">
         <table>
@@ -10,7 +12,7 @@
           <tbody id="new_relation_form" style="display:none;">
             <tr>
               <td>
-                <div id="watcher_select">
+                <div id="relation_select">
                 <%= lov_field_tag "icm_relation", Icm::IncidentRequest %>
                 </div>
               </td>
@@ -32,7 +34,7 @@
             }
             </script>
           <tbody id="relation_list">
-            <%= list_all_icm_incident_relations(incident_request)%>
+            <%= list_all_icm_incident_relations(incident_request.id)%>
           </tbody>
         </table>
 
